Styles done and add transtition animations

--- a/index.html
+++ b/index.html
@@ -22,19 +22,26 @@
       </p>
 
       <div class="ratingGroup">
-        <input type="radio" name="rating" value="1" id="rate_1" required>
-        <label for="rate_1">1</label>
-        <input type="radio" name="rating" value="2" id="rate_2">
-        <label for="rate_2">2</label>
-        <input type="radio" name="rating" value="3" id="rate_3">
-        <label for="rate_3">3</label>
-        <input type="radio" name="rating" value="4" id="rate_4">
-        <label for="rate_4">4</label>
-        <input type="radio" name="rating" value="5" id="rate_5">
-        <label for="rate_5">5</label>
-      </div>
-      <div class="error">
-        Please select a rating
+        <div>
+          <input class="radioButton" type="radio" name="rating" value="1" id="rate_1" required>
+          <label for="rate_1">1</label>
+        </div>
+        <div>
+          <input class="radioButton" type="radio" name="rating" value="2" id="rate_2">
+          <label for="rate_2">2</label>
+        </div>
+        <div>
+          <input class="radioButton" type="radio" name="rating" value="3" id="rate_3">
+          <label for="rate_3">3</label>
+        </div>
+        <div>
+          <input class="radioButton" type="radio" name="rating" value="4" id="rate_4">
+          <label for="rate_4">4</label>
+        </div>
+        <div>
+          <input class="radioButton" type="radio" name="rating" value="5" id="rate_5">
+          <label for="rate_5">5</label>
+        </div>
       </div>
       <button>
         Submit
