--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/cueinn">Fellipe “cueinn” da Silva</a>.
   </div>
 
   <script src="./src/js/script.js"></script>
